styling fix for create board button in dark mode

--- a/frontend/src/assets/styles/setup/_variables.scss
+++ b/frontend/src/assets/styles/setup/_variables.scss
@@ -188,4 +188,5 @@
     --create-menu-button-background-active-hovered: var(
         --create-menu-button-background-active
     );
+    --create-menu-button-color-active: var(--ds-text-inverse);
 }
